<resources>
    <string name="app_name">Paloma</string>
    <string name="register_message"><u>click here to register if you have no account</u></string>
    <string name="paloma">PALOMA</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New User</string>
    <string name="name">Full name</string>
    <string name="new_user_button_text">create new user</string>
    <string name="or">or</string>
    <string name="log_in_with_google">Log in with google</string>
    <string name="log_in_with_facebook">Log in with facebook</string>
    <string name="login_with_twitter">Login with twitter</string>
    <string name="login_with_github">Login with github</string>
    <string name="please_wait">Please wait…</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="save_user_profile">save user profile</string>
    <string name="search_more_friends">Search more friends</string>
    <string name="user_settings">User settings</string>
    <string name="logout">Logout</string>
    <string name="enter_friend_email_here">Enter friend email here</string>
    <string name="add_friend">add</string>
    <string name="no_results">No results</string>
    <string name="searching">Searching...</string>
    <string name="pending">Pending</string>
    <string name="accept">accept</string>
    <string name="send">send</string>
    <string name="empty_conversation">empty conversation</string>
    <string name="text_to_friends">Text to Friends</string>
    <string name="search">search</string>
</resources>
