<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/sign_in_input_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="cit.edu.paloma.SignInActivity">

        <TextView
            android:id="@+id/logo_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:text="@string/paloma"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="80sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/google_plus_button"
            app:layout_constraintLeft_toLeftOf="@id/logo_image"
            app:layout_constraintRight_toRightOf="@id/logo_image"
            app:layout_constraintTop_toBottomOf="@id/logo_image"
            android:layout_marginTop="48dp"
            android:drawableLeft="@drawable/ic_gplus"
            android:background="@drawable/google_plus_button"
            android:text="@string/log_in_with_google"
            style="@style/sign_in_button" />

        <Button
            android:id="@+id/facebook_button"
            app:layout_constraintLeft_toLeftOf="@id/google_plus_button"
            app:layout_constraintRight_toRightOf="@id/google_plus_button"
            app:layout_constraintTop_toBottomOf="@id/google_plus_button"
            android:drawableLeft="@drawable/ic_facebook"
            android:background="@drawable/facebook_button"
            android:text="@string/log_in_with_facebook"
            style="@style/sign_in_button" />

        <Button
            android:id="@+id/twitter_button"
            app:layout_constraintLeft_toLeftOf="@id/facebook_button"
            app:layout_constraintRight_toRightOf="@id/facebook_button"
            app:layout_constraintTop_toBottomOf="@id/facebook_button"
            android:drawableLeft="@drawable/ic_twitter"
            android:background="@drawable/twitter_button"
            android:text="@string/login_with_twitter"
            style="@style/sign_in_button" />

        <Button
            android:id="@+id/github_button"
            app:layout_constraintLeft_toLeftOf="@id/twitter_button"
            app:layout_constraintRight_toRightOf="@id/twitter_button"
            app:layout_constraintTop_toBottomOf="@id/twitter_button"
            android:drawableLeft="@drawable/ic_github"
            android:background="@drawable/github_button"
            android:text="@string/login_with_github"
            style="@style/sign_in_button" />

    </android.support.constraint.ConstraintLayout>

</RelativeLayout>