<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="cit.edu.paloma.activities.ChatActivity">

    <TextView
        android:id="@+id/empty_conversation_text"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_conversation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/send_button"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/message_edit"
        app:layout_constraintTop_toTopOf="@+id/message_edit"
        app:layout_constraintLeft_toRightOf="@+id/message_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/send"/>

    <EditText
        android:id="@id/message_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/send_button"
        android:hint="@string/text_to_friends"
        android:minHeight="48dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/messages_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/message_edit" />

</android.support.constraint.ConstraintLayout>
