<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="cit.edu.paloma.fragments.SuggestedFriendsListFragment">

    <EditText
        android:id="@+id/suggested_search_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Friends Email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/suggested_search_button"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@id/suggested_search_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/search"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/suggested_friends_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/suggested_search_box" />

    <TextView
        android:id="@+id/no_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/searching_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searching"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
