<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="cit.edu.paloma.UserRegisterActivity">

    <android.support.constraint.Guideline
        android:id="@+id/left_margin_guider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/right_margin_guider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:id="@+id/title_new_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingTop="40dp"
        android:text="@string/new_user"
        android:textColor="@color/colorAccent"
        android:textSize="40sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/register_user_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="40dp"
        android:textAllCaps="true"
        app:layout_constraintLeft_toRightOf="@id/left_margin_guider"
        app:layout_constraintTop_toBottomOf="@id/title_new_user_text" />

    <EditText
        android:id="@+id/register_full_name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toRightOf="@id/left_margin_guider"
        app:layout_constraintRight_toLeftOf="@id/right_margin_guider"
        app:layout_constraintTop_toBottomOf="@id/register_user_name_text"
        tools:text="Nguyen Tan Cuong" />

    <TextView
        android:id="@+id/register_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toRightOf="@id/left_margin_guider"
        app:layout_constraintTop_toBottomOf="@id/register_full_name_edit"/>

    <EditText
        android:id="@+id/register_email_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toRightOf="@id/left_margin_guider"
        app:layout_constraintRight_toLeftOf="@id/right_margin_guider"
        app:layout_constraintTop_toBottomOf="@id/register_email_text"
        tools:text="tancuong2596@gmail.com" />


    <TextView
        android:id="@+id/register_pass_text"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/colorAccent"
        android:textAllCaps="true"
        app:layout_constraintLeft_toRightOf="@id/left_margin_guider"
        app:layout_constraintTop_toBottomOf="@id/register_email_edit"/>

    <EditText
        android:id="@+id/register_pass_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        app:layout_constraintLeft_toRightOf="@id/left_margin_guider"
        app:layout_constraintRight_toLeftOf="@id/right_margin_guider"
        app:layout_constraintTop_toBottomOf="@id/register_pass_text"
        android:inputType="textPassword"
        tools:text="mypassword" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/new_user_button_text"
        style="@style/NormalButtonTheme"
        app:layout_constraintLeft_toRightOf="@id/left_margin_guider"
        app:layout_constraintRight_toLeftOf="@id/right_margin_guider"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"/>

</android.support.constraint.ConstraintLayout>
