<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cit.edu.paloma.activities.UserDetailsActivity">

    <Button
        android:id="@+id/save_user_profile_button"
        style="@style/NormalButtonTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_button"
        android:text="@string/save_user_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/save_user_profile_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/avatar_image"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/ic_placeholder"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detail_full_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar_image" />

            <EditText
                android:id="@+id/detail_full_name_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_full_name_text"
                tools:text="Nguyen Tan Cuong" />



            <TextView
                android:id="@+id/detail_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_full_name_edit" />

            <EditText
                android:id="@+id/detail_email_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_email_text"
                tools:text="tancuong2596@gmail.com" />

            <!--<TextView-->
                <!--android:id="@+id/detail_pass_text"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:paddingTop="12dp"-->
                <!--android:text="@string/password"-->
                <!--android:textAllCaps="true"-->
                <!--android:textColor="@color/colorAccent"-->
                <!--app:layout_constraintLeft_toLeftOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/detail_email_edit" />-->

            <!--<EditText-->
                <!--android:id="@+id/detail_pass_edit"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="textPassword"-->
                <!--android:textColor="@color/colorAccent"-->
                <!--app:layout_constraintLeft_toLeftOf="parent"-->
                <!--app:layout_constraintRight_toRightOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/detail_pass_text"-->
                <!--tools:text="123456" />-->

            <TextView
                android:id="@+id/detail_gender_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="12dp"
                android:text="@string/gender"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_email_edit" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_gender_text">

                <RadioButton
                    android:id="@+id/male_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/male"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent" />

                <RadioButton
                    android:id="@+id/female_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:buttonTint="@color/colorAccent"
                    android:text="@string/female"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent" />

            </RadioGroup>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>

